# project11_nav_msgs

./: CMakeLists.txt  package.xml
msg/: BoundingBox.msg  Curve.msg  CurvedTrajectory.msg  GeoOccupancyPolygon.msg  GeoOccupancyVectorMap.msg  GeoPolygon.msg  OccupancyPolygon.msg  OccupancyVectorMap.msg  RobotState.msg  Task.msg  TaskFeedback.msg  TaskInformation.msg  TaskInformationList.msg  Trajectory.msg
