<package format="2">
    <name>project11_nav_msgs</name>
    <version>0.0.0</version>
    <description>
    This package provides message types used with Project11's navigation stack.
    </description>
    
    <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>
    
    <license>BSD</license>
    
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>
    <depend>geometry_msgs</depend>
    
</package>
